2010-01-08    <Jim@LS-RED>

	* Version 8.0 released

2010-01-05    <Jim@LS-RED>

	* xspim/Imakefile, spim/Makefile Jaymie Strecker [JStrecker@wooster.edu]:
	Change install path from /usr to /usr/local.
	Removed -D option, which doesn't exists on MacOS.

	* pervasive:
	Change license to a BSD license, update copyright notices, and
	eliminated references to my old email address.

2009-12-05    <Jim@LS1>

	* CPU/spim-utils.c (initialize_run_stack) [이법재 bupjae@hotmail.com]:
	Simplify alignment of data on stack to ensure enough room is left
	for environment and args at top of stack.

	* PCSpim/PCSpimView.cpp:
	Initialize stack with arguments when running program from run dialog.

	* spim/spim.c (read_input) [Adam Wolfe Gordon
	adam.wolfegordon@gmail.com}:
	read_input filled buffer with last character of file not terminated by
	newline.

	* Documentation/spim.html [Dave Comer dmcomer@dmcmicro.com]:
	Links to MIPS documentation were broken.

2009-09-22    <Jim@LS1>

	* spim/spim.c (main) [Ohad Kammar ohad.kammar@ed.ac.uk]:
	Did not return value from exit syscall.

2009-03-01  James larus  <larus@ubuntu-laptop>

	* xspim/buttons.c [Karl Ljungkvist k.ljungkvist@gmail.com]:
	Step command reinitialized the stack, which changed registers (argc, argv).

2009-03-01    <Jim@LS1>

	* Documentation/spim.html:
	Updated web page to remove reference to spim source in PCSpim source distribution.

	* PCSpim/PCSpimView.{cpp, h}, SettingsDlg.cpp, BreakpointDlg.cpp, MainFrm.{cpp, h}:
	Force redisplay of data segment in situations in which register
	values may have changed, such as $sp. Some cleanup as well.

	* PCSpim/PCSpimView.cpp:
	Properly initialize the PC at the first invocation of the step operation.

	* PCSpim/PCSpimView.cpp, spim/spim.c [Pierce, Bill [pierce@hood.edu]:
	Initialize the stack when initializing the world, so the stack is
	initialized when single stepping as well as running.

2009-02-13    <Jim@LS1>

	* CPU/mem.c (bad_mem_write) [phong le phongle@nlsim.com]: