@@ -1,3 +1,8 @@
+2010-01-23    <Jim@LS-RED>
+
+	* CPU/endian.c: 
+	Added copyright notice.
+
 2010-01-08    <Jim@LS-RED>
 
 	* Version 8.0 released
